--- a/ui/seas/pretty.css
+++ b/ui/seas/pretty.css
@@ -2,7 +2,7 @@
 /* Following are the presentation styles -- edit away! */
 
 html, body {margin: 0; padding: 0;}
-body {background: white; color: black;}
+body {background: white url(seas-logo.png) no-repeat top left; color: black;}
 :link, :visited {text-decoration: none; color: #00C;}
 #controls :active {color: #888 !important;}
 #controls :focus {outline: 1px dotted #222;}
