commit pending changes before going home
git-svn-id: https://source.seas.harvard.edu/svn/version-control-workshop/trunk@15 bd803027-e5fa-4c6b-bc1c-58daae4b592a

--- a/ui/seas/pretty.css
+++ b/ui/seas/pretty.css
@@ -56,7 +56,7 @@ ul.urls {list-style: none; display: inline; margin: 0;}
 .urls li {display: inline; margin: 0;}
 .external {border-bottom: 1px dotted gray;}
 html>body .external {border-bottom: none;}
-.external:after {content: " \274F"; font-size: smaller; color: #77B;}
+.external:after {font-size: smaller; color: #77B;}
 
 .incremental, .incremental *, .incremental *:after {
   color: white; visibility: visible; border: 0; border: 0;}
@@ -120,6 +120,11 @@ p.admonition-title {
 		left center;
 }
 */
+
+.centered {
+	position: absolute;
+	top: 70px;
+}
 
 /* diagnostics */
 /*
