wrap <pre> content
git-svn-id: https://source.seas.harvard.edu/svn/version-control-workshop/trunk@50 bd803027-e5fa-4c6b-bc1c-58daae4b592a

--- a/ui/seas/pretty.css
+++ b/ui/seas/pretty.css
@@ -108,7 +108,7 @@ tt.docutils {background-color: white;}
 tt.literal {background-color: #d0d0d0; border-bottom: 1px dotted}
 
 pre.literal-block, pre.doctest-block {background-color: #d0d0d0;
-	border: thin solid black; padding: 1ex;}
+	border: thin solid black; padding: 1ex; white-space: pre-wrap;}
 
 div.admonition {background-color: #F3F781; border: thin solid black;
 	font-size: smaller;}
